--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="footer-section">
           <!-- YouTube Video Container -->
           <div class="youtubevideo">
-            <img id="thumbnail" src="Thumbnail.jpg" alt="YouTube Thumbnail" />
+            <img id="thumbnail" src="Thumbnail.png" alt="YouTube Thumbnail" />
             <iframe
               id="youtubeFrame"
               src="https://www.youtube.com/embed/aqz-KE-bpKQ?enablejsapi=1"
