--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               allowfullscreen
               style="display: none"
             ></iframe>
-             <img class="youtubeplaybtn" src="youtubeplaybtn.png" alt="">
+             <img class="youtubeplaybtn" src="youtubeplaybtn.jpg" alt="">
             
           </div>
 
